fixed center alignment for some text

--- a/client/css/style.scss
+++ b/client/css/style.scss
@@ -93,6 +93,7 @@ div {
         padding: 10px;
         width: 50%;
         line-height: 30px;
+        text-align: center;
     }
 }
 
@@ -372,6 +373,7 @@ div .bottom-main-nav {
     background-color: $lGray;
     height: 100px;
     width: 100%;
+    text-align: center;
     p {
         margin: 20px auto;
         padding: 20px;
@@ -416,6 +418,7 @@ div.main-slogan {
     padding: 20px;
     width: 100%;
     height: 350px;
+    text-align: center;
 }
 
 .bottom-slogan {
